# hrzoo-hpc-users-front

./: .envrc  .gitignore  .lvimrc  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
apache/: vhost-hrzoosignup.conf
cron/: hzsi-clearexpiredinvitations  hzsi-clearsessions  hzsi-dashboard-send  hzsi-flaginactiveusers  hzsi-mailinglist-subscribe  hzsi-resetprojectcounter
docker/: Dockerfile  collectstatic.sh  compose.env  docker-compose.yml  docker-run-hrzoo-web-mapped.sh  docker-run-hrzoo-web.sh  entrypoint.sh  memcache.ini  pypath.sh  run-django-server.sh  safety.sh
docker/apache/: hrzoosignup.conf
etc/: edugain_user_map.json  edugain_user_map.json.template  email_invite_en_message.txt  email_invite_en_subject.txt  email_invite_message.txt  email_invite_subject.txt  hzsi.conf.template  institution_map.json  institution_map.json.template  realm_map.json  realm_map.json.template  replacestring_map.json  signature  signature_en
helpers/: deploy-config.sh
hrzoosignup/: manage.py  requirements.txt
hrzoosignup/backend/: models.py  serializers.py  serializers_internal.py  signals.py  views_saml2acs.py
hrzoosignup/backend/api/: urls.py  view_accounting.py  view_projects.py  view_session.py  view_sshkeys.py  view_userproject.py  view_users.py  views.py
hrzoosignup/backend/api/internal/: urls.py  view_accounting.py  view_croris.py  view_invite.py  view_projects.py  view_software.py  view_sshkeys.py  view_userproject.py  view_users.py  views.py
hrzoosignup/backend/api/tests/: test_indicators.py  test_utils.py  test_view_accounting.py  test_view_users.py  test_views.py
hrzoosignup/backend/auth/saml2/: backends.py  config.dev.py  config.py  config_dev.py
hrzoosignup/backend/croris/: core.py
hrzoosignup/backend/dashboard/: indicators.py
hrzoosignup/backend/email/: project.py  sshkey.py  user.py
hrzoosignup/backend/email/project/: templates.py
hrzoosignup/backend/email/user/: templates.py
hrzoosignup/backend/fixtures/: counter.json  project-types.json  roles.json  science-software.json  states.json
hrzoosignup/backend/httpq/: excep.py  httpconn.py
hrzoosignup/backend/management/commands/: add_jupyter_tag.py  api_key.py  cache_usage.py  count_hzz_projects_users.py  dashboard.py  fix_croris_finance_array.py  fix_croris_institution.py  fix_institution.py  fix_project_date_approved.py  fix_project_dates.py  fix_software_init_created.py  flag-inactive-users.py  generate_usernames.py  handle_api_key.py  import_usage.py  ineligibles.py  jupyter_tag.py  mailinglist_subscribe.py  myflush.py  reset_project_counter.py  resync_croris_dates.py  set_person_type.py  superuser.py  user.py  (+2 more)
hrzoosignup/backend/migrations/: 0001_initial.py  0001_initial_squashed.py  0001_initial_squashed_0013_alter_userproject_unique_together_and_more.py  0002_alter_project_croris_id.py  0002_alter_role_name_alter_state_name_and_more.py  0002_alter_sshpublickey_unique_together_and_more.py  0002_initial_user_project_role_state.py  0003_alter_sshpublickey_unique_together.py  0003_project_staff_resources_type_alter_project_reason_and_more.py  0003_projectcount.py  0003_user_croris_mail_user_person_mail_alter_user_email_and_more.py  0004_alter_project_croris_identifier_and_more.py  0004_dateextend.py  0004_project_identifier.py  0004_sciencesoftware.py  0005_alter_project_croris_end_alter_project_croris_start_and_more.py  0005_rename_name_staffcomment_project_state_and_more.py  0005_user_person_oib_user_person_organisation.py  0006_alter_user_person_oib.py  0006_rename_date_approved_project_date_changed_and_more.py  0006_sciencesoftware_created.py  0007_custominvitation.py  0007_rename_users_sshpublickey_user_and_more.py  0007_sciencesoftware_added_by.py  0008_alter_sshpublickey_public_key.py  0008_project_change_history_project_changed_by.py  0008_remove_custominvitation_emails.py  0009_alter_project_approved_by_alter_project_denied_by.py  0009_project_date_approved.py  0009_projecttype_remove_project_states_project_state_and_more.py  0010_alter_project_croris_summary.py  0010_project_croris_institute_project_institute.py  0010_set_project_date_todatechanged.py  0011_alter_project_croris_end_alter_project_croris_start_and_more.py  0011_custominvitation_person_oib.py  0011_user_status.py  0012_alter_custominvitation_unique_together_and_more.py  0012_alter_userproject_unique_together.py  0012_user_croris_mbz.py  0013_alter_user_croris_mbz.py  (+21 more)
hrzoosignup/backend/tasks/: croris_institutions.py  mailinglist_subscribe.py
hrzoosignup/backend/utils/: gen_username.py  institution_map.py  usage_data_preparation.py  various.py
hrzoosignup/frontend/: .babelrc  Makefile  build_bundle.sh  keep-latest-bundle.sh  package-lock.json  package.json  webpack.config.js  webpack.devserver.config.js
hrzoosignup/frontend/src/: App.jsx  main.jsx  routes.jsx
hrzoosignup/hrzoosignup/: asgi.py  settings-devserver.py  settings.py  urls.py  wsgi.py
hrzoosignup/templates/: index.html
(+137 files in other folders)
